<resources>
    <string name="app_name">MyApp</string>
    <string name="jon_biolette">Jon Biolette</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="camera">Street Camera</string>
    <string name="enter_you_name_here">Enter you name here</string>
    <string name="title_activity_movies">Movies</string>
    <string name="title_activity_firebase">Firebase</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="movie_details">Movie Details</string>
    <string name="image_of_selected_movie">image of selected movie</string>
    <string name="traffic_camera">Traffic Camera</string>
    <string name="title_activity_traffic_camera" />
    <string name="images">images</string>
    <string name="image_of_selected_camera" />
    <string name="todo">TODO</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="movie">Movie</string>
    <string name="location">Location</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
</resources>