<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainActivity1">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:height="48dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/WordTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/userNameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/userNameLayout"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="Enter you name here"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/WordTable"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TableLayout
        android:id="@+id/WordTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_weight="10"
                android:text="@string/movie" />

            <Button
                android:id="@+id/cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="20"
                android:text="@string/traffic_camera" />
        </TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/location"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_weight="5"
                android:text="@string/location"
                android:textColor="#00695C" />

            <Button
                android:id="@+id/zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="10"
                android:text="@string/zip"
                android:textColor="#00796B"
                tools:ignore="TextContrastCheck" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/emailAddressLayout"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="43dp"
        android:autofillHints="E-Mail Address"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/WordTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLayout"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/passwordLayout"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/WordTable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>